--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
         <div class="max-w-5xl mx-auto px-4 py-10 sm:py-14">
           <h2 class="text-2xl sm:text-3xl font-semibold mb-2">Get a Free Quote</h2>
           <p class="text-sm text-slate-300 mb-6 max-w-xl">
-            Send a quick message with what you need moved, where it’s going, and when.
-            Marcos will respond as soon as possible with pricing and availability.
+            Reach out directly with what you need moved, where it’s going, and when.
+            Marcos responds quickly with pricing and availability.
           </p>
 
           <div class="grid md:grid-cols-2 gap-8">
@@ -227,26 +227,25 @@
               </div>
             </div>
 
-            <form class="space-y-4 text-sm">
-              <div>
-                <label for="name" class="block text-xs mb-1">Your Name</label>
-                <input id="name" type="text" class="w-full rounded-lg border border-slate-700 bg-slate-900/80 px-3 py-2 text-sm focus:outline-none focus:ring-1 focus:ring-yellow-400" placeholder="Full name" />
-              </div>
-              <div>
-                <label for="phone" class="block text-xs mb-1">Phone or WhatsApp</label>
-                <input id="phone" type="text" class="w-full rounded-lg border border-slate-700 bg-slate-900/80 px-3 py-2 text-sm focus:outline-none focus:ring-1 focus:ring-yellow-400" placeholder="Best number to reach you" />
-              </div>
-              <div>
-                <label for="details" class="block text-xs mb-1">What do you need moved?</label>
-                <textarea id="details" rows="4" class="w-full rounded-lg border border-slate-700 bg-slate-900/80 px-3 py-2 text-sm focus:outline-none focus:ring-1 focus:ring-yellow-400" placeholder="Describe the load, pickup & drop-off locations, and your ideal date/time."></textarea>
-              </div>
-              <p class="text-[0.7rem] text-slate-400">
-                Note: This form doesn’t send yet. Replace it with your own form handler or link to WhatsApp / email.
+            <div class="border border-slate-700 rounded-xl p-4 bg-slate-900/60 space-y-4 text-sm">
+              <h3 class="font-semibold text-base">Contact Marcos directly</h3>
+              <p class="text-xs text-slate-300">
+                Call for the fastest response or email a few details (load, pickup & drop-off locations, and timing).
               </p>
-              <button type="button" class="w-full inline-flex justify-center items-center px-4 py-2 rounded-full text-sm font-semibold bg-yellow-400 text-slate-950 hover:bg-yellow-300 transition">
-                Copy Details & Send via WhatsApp
-              </button>
-            </form>
+              <div class="flex flex-col sm:flex-row gap-3">
+                <a href="tel:5551234567" class="inline-flex items-center justify-center px-4 py-2 rounded-full text-sm font-semibold bg-yellow-400 text-slate-950 hover:bg-yellow-300 transition">
+                  Call (555) 123-4567
+                </a>
+                <a href="mailto:marcos@example.com" class="inline-flex items-center justify-center px-4 py-2 rounded-full text-sm font-semibold border border-slate-600 hover:border-yellow-400 transition">
+                  Email Marcos
+                </a>
+              </div>
+              <ul class="text-xs text-slate-300 space-y-1">
+                <li>• Include your pickup and drop-off addresses.</li>
+                <li>• Share the load size, weight, and any special handling needs.</li>
+                <li>• Mention your ideal pickup time and date.</li>
+              </ul>
+            </div>
           </div>
         </div>
       </section>
