Add box truck hero image

--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
             <div class="absolute inset-0 bg-gradient-to-tr from-yellow-500/20 via-transparent to-sky-500/20 blur-3xl pointer-events-none"></div>
             <div class="relative border border-slate-700 rounded-2xl p-4 bg-gradient-to-br from-slate-900 to-slate-950 shadow-xl">
               <div class="aspect-[4/3] w-full rounded-xl border border-slate-700 overflow-hidden bg-slate-900 flex items-center justify-center text-center px-4">
-                <p class="text-sm text-slate-300">
-                  Add a photo of Marcos’s truck here.<br />
-                  For now this is a placeholder card.
-                </p>
+                <img
+                  src="https://images.unsplash.com/photo-1541417904950-b855846fe074?auto=format&fit=crop&w=1200&q=80"
+                  alt="White box truck parked in a lot"
+                  class="w-full h-full object-cover"
+                  loading="lazy"
+                />
               </div>
               <div class="mt-4 flex justify-between text-xs text-slate-300">
                 <div>
