--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <div class="relative border border-slate-700 rounded-2xl p-4 bg-gradient-to-br from-slate-900 to-slate-950 shadow-xl">
               <div class="aspect-[4/3] w-full rounded-xl border border-slate-700 overflow-hidden bg-slate-900 flex items-center justify-center text-center px-4">
                 <img
-                  src="https://images.unsplash.com/photo-1541417904950-b855846fe074?auto=format&fit=crop&w=1200&q=80"
-                  alt="White box truck parked in a lot"
+                  src="https://upload.wikimedia.org/wikipedia/commons/7/77/Box_truck_in_Boston.jpg"
+                  alt="White box truck driving through Boston"
                   class="w-full h-full object-cover"
                   loading="lazy"
                 />
