--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
             <div class="relative border border-slate-700 rounded-2xl p-4 bg-gradient-to-br from-slate-900 to-slate-950 shadow-xl">
               <div class="aspect-[4/3] w-full rounded-xl border border-slate-700 overflow-hidden bg-slate-900 flex items-center justify-center text-center px-4">
                 <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/7/77/Box_truck_in_Boston.jpg"
-                  alt="White box truck driving through Boston"
+                  src="./box-truck.svg"
+                  alt="Illustration of a white box truck"
                   class="w-full h-full object-cover"
-                  loading="lazy"
+                  loading="eager"
                 />
               </div>
               <div class="mt-4 flex justify-between text-xs text-slate-300">
