Refine hero box truck artwork

--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
                 <img
                   src="./box-truck.svg"
                   alt="Illustration of a white box truck"
-                  class="w-full h-full object-cover"
+                  class="w-full h-full object-contain"
                   loading="eager"
                 />
               </div>
               <div class="mt-4 flex justify-between text-xs text-slate-300">
                 <div>
                   <div class="font-semibold text-sm">Truck Type</div>
-                  <div>Pickup / Flatbed / Box (edit)</div>
+                  <div>16–18 ft box truck • Lift gate available</div>
                 </div>
                 <div class="text-right">
                   <div class="font-semibold text-sm">Typical Loads</div>
