--- a/index.html
+++ b/index.html
@@ -65,12 +65,91 @@
             <div class="absolute inset-0 bg-gradient-to-tr from-yellow-500/20 via-transparent to-sky-500/20 blur-3xl pointer-events-none"></div>
             <div class="relative border border-slate-700 rounded-2xl p-4 bg-gradient-to-br from-slate-900 to-slate-950 shadow-xl">
               <div class="aspect-[4/3] w-full rounded-xl border border-slate-700 overflow-hidden bg-slate-900 flex items-center justify-center text-center px-4">
-                <img
-                  src="./box-truck.svg"
-                  alt="Illustration of a white box truck"
-                  class="w-full h-full object-contain"
-                  loading="eager"
-                />
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 400" role="img" aria-labelledby="truck-title truck-desc" class="w-full h-full object-contain" focusable="false">
+                  <title id="truck-title">White box truck illustration</title>
+                  <desc id="truck-desc">Side view of a white box truck on a twilight background</desc>
+                  <defs>
+                    <linearGradient id="sky" x1="0%" y1="0%" x2="0%" y2="100%">
+                      <stop offset="0%" stop-color="#0ea5e9" />
+                      <stop offset="60%" stop-color="#0f172a" />
+                      <stop offset="100%" stop-color="#0b1225" />
+                    </linearGradient>
+                    <linearGradient id="cab" x1="0%" y1="0%" x2="100%" y2="100%">
+                      <stop offset="0%" stop-color="#f8fafc" />
+                      <stop offset="100%" stop-color="#e2e8f0" />
+                    </linearGradient>
+                    <linearGradient id="box" x1="0%" y1="0%" x2="0%" y2="100%">
+                      <stop offset="0%" stop-color="#f8fafc" />
+                      <stop offset="100%" stop-color="#e2e8f0" />
+                    </linearGradient>
+                    <linearGradient id="glass" x1="0%" y1="0%" x2="100%" y2="0%">
+                      <stop offset="0%" stop-color="#c7d2fe" stop-opacity="0.9" />
+                      <stop offset="100%" stop-color="#60a5fa" stop-opacity="0.85" />
+                    </linearGradient>
+                    <filter id="shadow" x="-10%" y="-10%" width="120%" height="140%" color-interpolation-filters="sRGB">
+                      <feDropShadow dx="0" dy="18" stdDeviation="14" flood-color="#0b1020" flood-opacity="0.45" />
+                    </filter>
+                  </defs>
+
+                  <rect width="640" height="400" rx="22" fill="url(#sky)" />
+                  <rect x="32" y="280" width="576" height="36" rx="12" fill="#0b1329" />
+                  <rect x="24" y="300" width="592" height="54" rx="14" fill="#0f172a" />
+                  <rect x="48" y="310" width="544" height="10" rx="5" fill="#17233c" />
+                  <rect x="48" y="328" width="120" height="6" rx="3" fill="#1d2c48" opacity="0.6" />
+                  <rect x="472" y="328" width="120" height="6" rx="3" fill="#1d2c48" opacity="0.6" />
+                  <circle cx="540" cy="92" r="36" fill="#c7d2fe" opacity="0.14" />
+                  <circle cx="92" cy="108" r="26" fill="#c7d2fe" opacity="0.1" />
+
+                  <g filter="url(#shadow)">
+                    <rect x="140" y="128" width="380" height="184" rx="14" fill="url(#box)" stroke="#cbd5e1" stroke-width="6" />
+                    <rect x="170" y="188" width="110" height="118" rx="14" fill="url(#cab)" stroke="#cbd5e1" stroke-width="6" />
+                  </g>
+
+                  <rect x="186" y="204" width="62" height="60" rx="10" fill="url(#glass)" stroke="#cbd5e1" stroke-width="6" />
+                  <rect x="255" y="204" width="46" height="34" rx="6" fill="#cbd5e1" />
+                  <rect x="360" y="156" width="146" height="86" rx="10" fill="#e2e8f0" stroke="#cbd5e1" stroke-width="4" />
+                  <rect x="360" y="254" width="44" height="18" rx="4" fill="#cbd5e1" />
+                  <rect x="416" y="254" width="44" height="18" rx="4" fill="#cbd5e1" />
+                  <rect x="472" y="254" width="44" height="18" rx="4" fill="#cbd5e1" />
+                  <rect x="182" y="274" width="62" height="12" rx="6" fill="#334155" />
+                  <rect x="380" y="274" width="116" height="12" rx="6" fill="#334155" />
+
+                  <path d="M154 292 H520" stroke="#111827" stroke-width="14" stroke-linecap="round" />
+                  <circle cx="226" cy="304" r="48" fill="#0f172a" stroke="#0b1220" stroke-width="10" />
+                  <circle cx="226" cy="304" r="26" fill="#e2e8f0" stroke="#cbd5e1" stroke-width="10" />
+                  <circle cx="456" cy="304" r="48" fill="#0f172a" stroke="#0b1220" stroke-width="10" />
+                  <circle cx="456" cy="304" r="26" fill="#e2e8f0" stroke="#cbd5e1" stroke-width="10" />
+                  <circle cx="226" cy="304" r="8" fill="#94a3b8" />
+                  <circle cx="456" cy="304" r="8" fill="#94a3b8" />
+
+                  <path d="M172 276 c32-28 84-34 118-12" stroke="#f59e0b" stroke-width="7" stroke-linecap="round" fill="none" />
+                  <path d="M380 272 c44-20 96-20 134 6" stroke="#f59e0b" stroke-width="7" stroke-linecap="round" fill="none" />
+
+                  <rect x="274" y="238" width="64" height="18" rx="6" fill="#f59e0b" />
+                  <rect x="306" y="262" width="102" height="12" rx="6" fill="#1f2937" opacity="0.9" />
+                  <rect x="334" y="280" width="54" height="10" rx="5" fill="#111827" />
+
+                  <circle cx="334" cy="212" r="6" fill="#eab308" />
+                  <rect x="302" y="214" width="26" height="6" rx="3" fill="#94a3b8" />
+                  <rect x="302" y="226" width="26" height="6" rx="3" fill="#94a3b8" />
+                  <rect x="456" y="192" width="20" height="6" rx="3" fill="#94a3b8" opacity="0.8" />
+                  <rect x="456" y="204" width="32" height="6" rx="3" fill="#94a3b8" opacity="0.8" />
+                  <rect x="456" y="216" width="18" height="6" rx="3" fill="#94a3b8" opacity="0.8" />
+
+                  <rect x="166" y="320" width="36" height="12" rx="6" fill="#0f172a" stroke="#0b1220" stroke-width="4" />
+                  <rect x="218" y="320" width="36" height="12" rx="6" fill="#0f172a" stroke="#0b1220" stroke-width="4" />
+                  <rect x="446" y="320" width="36" height="12" rx="6" fill="#0f172a" stroke="#0b1220" stroke-width="4" />
+                  <rect x="398" y="320" width="36" height="12" rx="6" fill="#0f172a" stroke="#0b1220" stroke-width="4" />
+
+                  <rect x="520" y="252" width="16" height="42" rx="6" fill="#16a34a" stroke="#0f172a" stroke-width="4" />
+                  <rect x="158" y="232" width="10" height="28" rx="4" fill="#facc15" />
+                  <rect x="154" y="258" width="18" height="10" rx="4" fill="#f59e0b" />
+                  <rect x="520" y="222" width="14" height="18" rx="5" fill="#facc15" />
+                  <rect x="530" y="220" width="18" height="14" rx="4" fill="#22d3ee" />
+
+                  <path d="M130 332 c20 10 48 14 76 10" stroke="#0f172a" stroke-width="6" stroke-linecap="round" opacity="0.4" />
+                  <path d="M420 338 c24 4 52 0 74-10" stroke="#0f172a" stroke-width="6" stroke-linecap="round" opacity="0.4" />
+                </svg>
               </div>
               <div class="mt-4 flex justify-between text-xs text-slate-300">
                 <div>
