--- a/index.html
+++ b/index.html
@@ -66,89 +66,83 @@
             <div class="relative border border-slate-700 rounded-2xl p-4 bg-gradient-to-br from-slate-900 to-slate-950 shadow-xl">
               <div class="aspect-[4/3] w-full rounded-xl border border-slate-700 overflow-hidden bg-slate-900 flex items-center justify-center text-center px-4">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 400" role="img" aria-labelledby="truck-title truck-desc" class="w-full h-full object-contain" focusable="false">
-                  <title id="truck-title">White box truck illustration</title>
-                  <desc id="truck-desc">Side view of a white box truck on a twilight background</desc>
+                  <title id="truck-title">Clean illustration of a white box truck</title>
+                  <desc id="truck-desc">Three-quarter side view of a real-world 16 ft box truck with simple lighting</desc>
                   <defs>
                     <linearGradient id="sky" x1="0%" y1="0%" x2="0%" y2="100%">
                       <stop offset="0%" stop-color="#0ea5e9" />
-                      <stop offset="60%" stop-color="#0f172a" />
-                      <stop offset="100%" stop-color="#0b1225" />
+                      <stop offset="70%" stop-color="#0b1329" />
+                    </linearGradient>
+                    <linearGradient id="box" x1="0%" y1="0%" x2="100%" y2="100%">
+                      <stop offset="0%" stop-color="#f8fafc" />
+                      <stop offset="100%" stop-color="#d9e2ec" />
                     </linearGradient>
                     <linearGradient id="cab" x1="0%" y1="0%" x2="100%" y2="100%">
-                      <stop offset="0%" stop-color="#f8fafc" />
-                      <stop offset="100%" stop-color="#e2e8f0" />
-                    </linearGradient>
-                    <linearGradient id="box" x1="0%" y1="0%" x2="0%" y2="100%">
-                      <stop offset="0%" stop-color="#f8fafc" />
-                      <stop offset="100%" stop-color="#e2e8f0" />
+                      <stop offset="0%" stop-color="#eef2ff" />
+                      <stop offset="100%" stop-color="#cbd5e1" />
                     </linearGradient>
                     <linearGradient id="glass" x1="0%" y1="0%" x2="100%" y2="0%">
-                      <stop offset="0%" stop-color="#c7d2fe" stop-opacity="0.9" />
+                      <stop offset="0%" stop-color="#93c5fd" stop-opacity="0.9" />
                       <stop offset="100%" stop-color="#60a5fa" stop-opacity="0.85" />
                     </linearGradient>
-                    <filter id="shadow" x="-10%" y="-10%" width="120%" height="140%" color-interpolation-filters="sRGB">
-                      <feDropShadow dx="0" dy="18" stdDeviation="14" flood-color="#0b1020" flood-opacity="0.45" />
+                    <filter id="shadow" x="-12%" y="-10%" width="130%" height="150%" color-interpolation-filters="sRGB">
+                      <feDropShadow dx="0" dy="14" stdDeviation="12" flood-color="#0b1220" flood-opacity="0.45" />
                     </filter>
                   </defs>
 
                   <rect width="640" height="400" rx="22" fill="url(#sky)" />
-                  <rect x="32" y="280" width="576" height="36" rx="12" fill="#0b1329" />
-                  <rect x="24" y="300" width="592" height="54" rx="14" fill="#0f172a" />
-                  <rect x="48" y="310" width="544" height="10" rx="5" fill="#17233c" />
-                  <rect x="48" y="328" width="120" height="6" rx="3" fill="#1d2c48" opacity="0.6" />
-                  <rect x="472" y="328" width="120" height="6" rx="3" fill="#1d2c48" opacity="0.6" />
-                  <circle cx="540" cy="92" r="36" fill="#c7d2fe" opacity="0.14" />
-                  <circle cx="92" cy="108" r="26" fill="#c7d2fe" opacity="0.1" />
+                  <rect x="40" y="300" width="560" height="54" rx="16" fill="#0f172a" />
+                  <rect x="56" y="316" width="528" height="10" rx="5" fill="#17233c" />
+                  <rect x="56" y="332" width="128" height="6" rx="3" fill="#1d2c48" opacity="0.7" />
+                  <rect x="456" y="332" width="128" height="6" rx="3" fill="#1d2c48" opacity="0.7" />
+                  <circle cx="520" cy="84" r="34" fill="#c7d2fe" opacity="0.14" />
+                  <circle cx="108" cy="110" r="24" fill="#c7d2fe" opacity="0.12" />
 
                   <g filter="url(#shadow)">
-                    <rect x="140" y="128" width="380" height="184" rx="14" fill="url(#box)" stroke="#cbd5e1" stroke-width="6" />
-                    <rect x="170" y="188" width="110" height="118" rx="14" fill="url(#cab)" stroke="#cbd5e1" stroke-width="6" />
+                    <path d="M152 170 L466 150 L504 214 L506 280 L172 294 Z" fill="url(#box)" stroke="#cbd5e1" stroke-width="6" />
+                    <path d="M170 208 L276 204 L320 262 L320 302 L180 308 Z" fill="url(#cab)" stroke="#cbd5e1" stroke-width="6" />
                   </g>
 
-                  <rect x="186" y="204" width="62" height="60" rx="10" fill="url(#glass)" stroke="#cbd5e1" stroke-width="6" />
-                  <rect x="255" y="204" width="46" height="34" rx="6" fill="#cbd5e1" />
-                  <rect x="360" y="156" width="146" height="86" rx="10" fill="#e2e8f0" stroke="#cbd5e1" stroke-width="4" />
-                  <rect x="360" y="254" width="44" height="18" rx="4" fill="#cbd5e1" />
-                  <rect x="416" y="254" width="44" height="18" rx="4" fill="#cbd5e1" />
-                  <rect x="472" y="254" width="44" height="18" rx="4" fill="#cbd5e1" />
-                  <rect x="182" y="274" width="62" height="12" rx="6" fill="#334155" />
-                  <rect x="380" y="274" width="116" height="12" rx="6" fill="#334155" />
+                  <path d="M272 206 L316 260 L312 260 Q292 228 264 218 Z" fill="#cbd5e1" />
+                  <rect x="192" y="218" width="62" height="60" rx="10" fill="url(#glass)" stroke="#cbd5e1" stroke-width="6" />
+                  <rect x="360" y="182" width="150" height="78" rx="10" fill="#e2e8f0" stroke="#cbd5e1" stroke-width="4" />
+                  <rect x="368" y="268" width="60" height="18" rx="4" fill="#cbd5e1" />
+                  <rect x="442" y="264" width="74" height="18" rx="4" fill="#cbd5e1" />
+                  <rect x="186" y="288" width="66" height="12" rx="6" fill="#334155" />
+                  <rect x="384" y="286" width="128" height="12" rx="6" fill="#334155" />
 
-                  <path d="M154 292 H520" stroke="#111827" stroke-width="14" stroke-linecap="round" />
-                  <circle cx="226" cy="304" r="48" fill="#0f172a" stroke="#0b1220" stroke-width="10" />
-                  <circle cx="226" cy="304" r="26" fill="#e2e8f0" stroke="#cbd5e1" stroke-width="10" />
-                  <circle cx="456" cy="304" r="48" fill="#0f172a" stroke="#0b1220" stroke-width="10" />
-                  <circle cx="456" cy="304" r="26" fill="#e2e8f0" stroke="#cbd5e1" stroke-width="10" />
-                  <circle cx="226" cy="304" r="8" fill="#94a3b8" />
-                  <circle cx="456" cy="304" r="8" fill="#94a3b8" />
+                  <path d="M160 306 H520" stroke="#0f172a" stroke-width="14" stroke-linecap="round" />
+                  <circle cx="230" cy="312" r="48" fill="#0f172a" stroke="#0b1220" stroke-width="10" />
+                  <circle cx="230" cy="312" r="26" fill="#e2e8f0" stroke="#cbd5e1" stroke-width="10" />
+                  <circle cx="452" cy="312" r="48" fill="#0f172a" stroke="#0b1220" stroke-width="10" />
+                  <circle cx="452" cy="312" r="26" fill="#e2e8f0" stroke="#cbd5e1" stroke-width="10" />
+                  <circle cx="230" cy="312" r="8" fill="#94a3b8" />
+                  <circle cx="452" cy="312" r="8" fill="#94a3b8" />
 
-                  <path d="M172 276 c32-28 84-34 118-12" stroke="#f59e0b" stroke-width="7" stroke-linecap="round" fill="none" />
-                  <path d="M380 272 c44-20 96-20 134 6" stroke="#f59e0b" stroke-width="7" stroke-linecap="round" fill="none" />
+                  <rect x="272" y="244" width="70" height="18" rx="6" fill="#f59e0b" />
+                  <rect x="310" y="268" width="104" height="12" rx="6" fill="#111827" opacity="0.9" />
+                  <rect x="338" y="286" width="56" height="10" rx="5" fill="#0b1220" />
 
-                  <rect x="274" y="238" width="64" height="18" rx="6" fill="#f59e0b" />
-                  <rect x="306" y="262" width="102" height="12" rx="6" fill="#1f2937" opacity="0.9" />
-                  <rect x="334" y="280" width="54" height="10" rx="5" fill="#111827" />
+                  <circle cx="340" cy="222" r="6" fill="#eab308" />
+                  <rect x="306" y="224" width="28" height="6" rx="3" fill="#94a3b8" />
+                  <rect x="306" y="236" width="28" height="6" rx="3" fill="#94a3b8" />
+                  <rect x="470" y="200" width="24" height="8" rx="3" fill="#94a3b8" opacity="0.8" />
+                  <rect x="470" y="214" width="36" height="8" rx="3" fill="#94a3b8" opacity="0.8" />
+                  <rect x="470" y="228" width="20" height="8" rx="3" fill="#94a3b8" opacity="0.8" />
 
-                  <circle cx="334" cy="212" r="6" fill="#eab308" />
-                  <rect x="302" y="214" width="26" height="6" rx="3" fill="#94a3b8" />
-                  <rect x="302" y="226" width="26" height="6" rx="3" fill="#94a3b8" />
-                  <rect x="456" y="192" width="20" height="6" rx="3" fill="#94a3b8" opacity="0.8" />
-                  <rect x="456" y="204" width="32" height="6" rx="3" fill="#94a3b8" opacity="0.8" />
-                  <rect x="456" y="216" width="18" height="6" rx="3" fill="#94a3b8" opacity="0.8" />
+                  <rect x="166" y="326" width="38" height="12" rx="6" fill="#0f172a" stroke="#0b1220" stroke-width="4" />
+                  <rect x="220" y="326" width="38" height="12" rx="6" fill="#0f172a" stroke="#0b1220" stroke-width="4" />
+                  <rect x="438" y="326" width="38" height="12" rx="6" fill="#0f172a" stroke="#0b1220" stroke-width="4" />
+                  <rect x="392" y="326" width="38" height="12" rx="6" fill="#0f172a" stroke="#0b1220" stroke-width="4" />
 
-                  <rect x="166" y="320" width="36" height="12" rx="6" fill="#0f172a" stroke="#0b1220" stroke-width="4" />
-                  <rect x="218" y="320" width="36" height="12" rx="6" fill="#0f172a" stroke="#0b1220" stroke-width="4" />
-                  <rect x="446" y="320" width="36" height="12" rx="6" fill="#0f172a" stroke="#0b1220" stroke-width="4" />
-                  <rect x="398" y="320" width="36" height="12" rx="6" fill="#0f172a" stroke="#0b1220" stroke-width="4" />
+                  <rect x="520" y="244" width="16" height="44" rx="6" fill="#16a34a" stroke="#0f172a" stroke-width="4" />
+                  <rect x="162" y="232" width="10" height="30" rx="4" fill="#facc15" />
+                  <rect x="158" y="262" width="18" height="10" rx="4" fill="#f59e0b" />
+                  <rect x="520" y="214" width="14" height="18" rx="5" fill="#facc15" />
+                  <rect x="530" y="210" width="18" height="16" rx="4" fill="#22d3ee" />
 
-                  <rect x="520" y="252" width="16" height="42" rx="6" fill="#16a34a" stroke="#0f172a" stroke-width="4" />
-                  <rect x="158" y="232" width="10" height="28" rx="4" fill="#facc15" />
-                  <rect x="154" y="258" width="18" height="10" rx="4" fill="#f59e0b" />
-                  <rect x="520" y="222" width="14" height="18" rx="5" fill="#facc15" />
-                  <rect x="530" y="220" width="18" height="14" rx="4" fill="#22d3ee" />
-
-                  <path d="M130 332 c20 10 48 14 76 10" stroke="#0f172a" stroke-width="6" stroke-linecap="round" opacity="0.4" />
-                  <path d="M420 338 c24 4 52 0 74-10" stroke="#0f172a" stroke-width="6" stroke-linecap="round" opacity="0.4" />
+                  <path d="M136 336 c24 10 54 14 84 10" stroke="#0f172a" stroke-width="6" stroke-linecap="round" opacity="0.4" />
+                  <path d="M420 342 c26 6 56 2 78-10" stroke="#0f172a" stroke-width="6" stroke-linecap="round" opacity="0.4" />
                 </svg>
               </div>
               <div class="mt-4 flex justify-between text-xs text-slate-300">
