Create minimal box truck logo

--- a/index.html
+++ b/index.html
@@ -66,83 +66,64 @@
             <div class="relative border border-slate-700 rounded-2xl p-4 bg-gradient-to-br from-slate-900 to-slate-950 shadow-xl">
               <div class="aspect-[4/3] w-full rounded-xl border border-slate-700 overflow-hidden bg-slate-900 flex items-center justify-center text-center px-4">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 400" role="img" aria-labelledby="truck-title truck-desc" class="w-full h-full object-contain" focusable="false">
-                  <title id="truck-title">Clean illustration of a white box truck</title>
-                  <desc id="truck-desc">Three-quarter side view of a real-world 16 ft box truck with simple lighting</desc>
+                  <title id="truck-title">Minimal box truck logo</title>
+                  <desc id="truck-desc">Clean two-tone logo of a three-quarter perspective box truck</desc>
                   <defs>
-                    <linearGradient id="sky" x1="0%" y1="0%" x2="0%" y2="100%">
-                      <stop offset="0%" stop-color="#0ea5e9" />
-                      <stop offset="70%" stop-color="#0b1329" />
+                    <linearGradient id="bg" x1="0%" y1="0%" x2="0%" y2="100%">
+                      <stop offset="0%" stop-color="#111827" />
+                      <stop offset="100%" stop-color="#0b1329" />
                     </linearGradient>
-                    <linearGradient id="box" x1="0%" y1="0%" x2="100%" y2="100%">
-                      <stop offset="0%" stop-color="#f8fafc" />
-                      <stop offset="100%" stop-color="#d9e2ec" />
-                    </linearGradient>
-                    <linearGradient id="cab" x1="0%" y1="0%" x2="100%" y2="100%">
-                      <stop offset="0%" stop-color="#eef2ff" />
-                      <stop offset="100%" stop-color="#cbd5e1" />
-                    </linearGradient>
-                    <linearGradient id="glass" x1="0%" y1="0%" x2="100%" y2="0%">
-                      <stop offset="0%" stop-color="#93c5fd" stop-opacity="0.9" />
-                      <stop offset="100%" stop-color="#60a5fa" stop-opacity="0.85" />
-                    </linearGradient>
-                    <filter id="shadow" x="-12%" y="-10%" width="130%" height="150%" color-interpolation-filters="sRGB">
-                      <feDropShadow dx="0" dy="14" stdDeviation="12" flood-color="#0b1220" flood-opacity="0.45" />
-                    </filter>
                   </defs>
 
-                  <rect width="640" height="400" rx="22" fill="url(#sky)" />
-                  <rect x="40" y="300" width="560" height="54" rx="16" fill="#0f172a" />
-                  <rect x="56" y="316" width="528" height="10" rx="5" fill="#17233c" />
-                  <rect x="56" y="332" width="128" height="6" rx="3" fill="#1d2c48" opacity="0.7" />
-                  <rect x="456" y="332" width="128" height="6" rx="3" fill="#1d2c48" opacity="0.7" />
-                  <circle cx="520" cy="84" r="34" fill="#c7d2fe" opacity="0.14" />
-                  <circle cx="108" cy="110" r="24" fill="#c7d2fe" opacity="0.12" />
+                  <rect width="640" height="400" rx="24" fill="url(#bg)" />
+                  <rect x="120" y="274" width="400" height="18" rx="9" fill="#0f172a" />
+                  <rect x="104" y="288" width="432" height="32" rx="12" fill="#0b1220" />
 
-                  <g filter="url(#shadow)">
-                    <path d="M152 170 L466 150 L504 214 L506 280 L172 294 Z" fill="url(#box)" stroke="#cbd5e1" stroke-width="6" />
-                    <path d="M170 208 L276 204 L320 262 L320 302 L180 308 Z" fill="url(#cab)" stroke="#cbd5e1" stroke-width="6" />
+                  <g transform="translate(140 98)">
+                    <rect x="78" y="92" width="264" height="140" rx="18" fill="#e5e7eb" stroke="#cbd5e1" stroke-width="10" />
+                    <path d="M76 150 L172 112 L276 136 L276 248 L78 248 Z" fill="#f8fafc" stroke="#cbd5e1" stroke-width="10" />
+                    <path d="M76 150 L172 112 L172 248 L78 248 Z" fill="#f1f5f9" />
+                    <rect x="108" y="156" width="70" height="66" rx="12" fill="#0ea5e9" stroke="#cbd5e1" stroke-width="8" />
+                    <path d="M178 160 L228 214" stroke="#cbd5e1" stroke-width="8" stroke-linecap="round" />
+                    <rect x="264" y="148" width="130" height="98" rx="12" fill="#e2e8f0" stroke="#cbd5e1" stroke-width="8" />
+                    <rect x="284" y="228" width="54" height="20" rx="8" fill="#cbd5e1" />
+                    <rect x="346" y="228" width="54" height="20" rx="8" fill="#cbd5e1" />
+                    <rect x="140" y="246" width="62" height="14" rx="7" fill="#111827" />
+                    <rect x="282" y="246" width="126" height="14" rx="7" fill="#111827" />
+
+                    <path d="M32 248 H424" stroke="#0f172a" stroke-width="18" stroke-linecap="round" />
+                    <circle cx="132" cy="258" r="54" fill="#0b1220" stroke="#020617" stroke-width="10" />
+                    <circle cx="132" cy="258" r="26" fill="#e2e8f0" stroke="#cbd5e1" stroke-width="10" />
+                    <circle cx="344" cy="258" r="54" fill="#0b1220" stroke="#020617" stroke-width="10" />
+                    <circle cx="344" cy="258" r="26" fill="#e2e8f0" stroke="#cbd5e1" stroke-width="10" />
+                    <circle cx="132" cy="258" r="8" fill="#94a3b8" />
+                    <circle cx="344" cy="258" r="8" fill="#94a3b8" />
+
+                    <rect x="214" y="206" width="76" height="24" rx="10" fill="#fbbf24" />
+                    <rect x="236" y="238" width="112" height="14" rx="7" fill="#0f172a" />
+                    <rect x="258" y="256" width="60" height="12" rx="6" fill="#020617" />
+
+                    <circle cx="250" cy="184" r="8" fill="#fbbf24" />
+                    <rect x="214" y="186" width="30" height="8" rx="4" fill="#94a3b8" />
+                    <rect x="214" y="200" width="30" height="8" rx="4" fill="#94a3b8" />
+                    <rect x="356" y="176" width="28" height="10" rx="5" fill="#94a3b8" opacity="0.9" />
+                    <rect x="356" y="192" width="42" height="10" rx="5" fill="#94a3b8" opacity="0.9" />
+                    <rect x="356" y="208" width="22" height="10" rx="5" fill="#94a3b8" opacity="0.9" />
+
+                    <rect x="40" y="272" width="46" height="16" rx="8" fill="#0f172a" stroke="#020617" stroke-width="6" />
+                    <rect x="102" y="272" width="46" height="16" rx="8" fill="#0f172a" stroke="#020617" stroke-width="6" />
+                    <rect x="318" y="272" width="46" height="16" rx="8" fill="#0f172a" stroke="#020617" stroke-width="6" />
+                    <rect x="258" y="272" width="46" height="16" rx="8" fill="#0f172a" stroke="#020617" stroke-width="6" />
+
+                    <rect x="406" y="214" width="20" height="54" rx="8" fill="#22c55e" stroke="#0f172a" stroke-width="6" />
+                    <rect x="30" y="176" width="12" height="36" rx="6" fill="#fbbf24" />
+                    <rect x="26" y="214" width="22" height="12" rx="6" fill="#f59e0b" />
+                    <rect x="406" y="182" width="18" height="20" rx="7" fill="#fbbf24" />
+                    <rect x="420" y="178" width="22" height="18" rx="5" fill="#0ea5e9" />
                   </g>
 
-                  <path d="M272 206 L316 260 L312 260 Q292 228 264 218 Z" fill="#cbd5e1" />
-                  <rect x="192" y="218" width="62" height="60" rx="10" fill="url(#glass)" stroke="#cbd5e1" stroke-width="6" />
-                  <rect x="360" y="182" width="150" height="78" rx="10" fill="#e2e8f0" stroke="#cbd5e1" stroke-width="4" />
-                  <rect x="368" y="268" width="60" height="18" rx="4" fill="#cbd5e1" />
-                  <rect x="442" y="264" width="74" height="18" rx="4" fill="#cbd5e1" />
-                  <rect x="186" y="288" width="66" height="12" rx="6" fill="#334155" />
-                  <rect x="384" y="286" width="128" height="12" rx="6" fill="#334155" />
-
-                  <path d="M160 306 H520" stroke="#0f172a" stroke-width="14" stroke-linecap="round" />
-                  <circle cx="230" cy="312" r="48" fill="#0f172a" stroke="#0b1220" stroke-width="10" />
-                  <circle cx="230" cy="312" r="26" fill="#e2e8f0" stroke="#cbd5e1" stroke-width="10" />
-                  <circle cx="452" cy="312" r="48" fill="#0f172a" stroke="#0b1220" stroke-width="10" />
-                  <circle cx="452" cy="312" r="26" fill="#e2e8f0" stroke="#cbd5e1" stroke-width="10" />
-                  <circle cx="230" cy="312" r="8" fill="#94a3b8" />
-                  <circle cx="452" cy="312" r="8" fill="#94a3b8" />
-
-                  <rect x="272" y="244" width="70" height="18" rx="6" fill="#f59e0b" />
-                  <rect x="310" y="268" width="104" height="12" rx="6" fill="#111827" opacity="0.9" />
-                  <rect x="338" y="286" width="56" height="10" rx="5" fill="#0b1220" />
-
-                  <circle cx="340" cy="222" r="6" fill="#eab308" />
-                  <rect x="306" y="224" width="28" height="6" rx="3" fill="#94a3b8" />
-                  <rect x="306" y="236" width="28" height="6" rx="3" fill="#94a3b8" />
-                  <rect x="470" y="200" width="24" height="8" rx="3" fill="#94a3b8" opacity="0.8" />
-                  <rect x="470" y="214" width="36" height="8" rx="3" fill="#94a3b8" opacity="0.8" />
-                  <rect x="470" y="228" width="20" height="8" rx="3" fill="#94a3b8" opacity="0.8" />
-
-                  <rect x="166" y="326" width="38" height="12" rx="6" fill="#0f172a" stroke="#0b1220" stroke-width="4" />
-                  <rect x="220" y="326" width="38" height="12" rx="6" fill="#0f172a" stroke="#0b1220" stroke-width="4" />
-                  <rect x="438" y="326" width="38" height="12" rx="6" fill="#0f172a" stroke="#0b1220" stroke-width="4" />
-                  <rect x="392" y="326" width="38" height="12" rx="6" fill="#0f172a" stroke="#0b1220" stroke-width="4" />
-
-                  <rect x="520" y="244" width="16" height="44" rx="6" fill="#16a34a" stroke="#0f172a" stroke-width="4" />
-                  <rect x="162" y="232" width="10" height="30" rx="4" fill="#facc15" />
-                  <rect x="158" y="262" width="18" height="10" rx="4" fill="#f59e0b" />
-                  <rect x="520" y="214" width="14" height="18" rx="5" fill="#facc15" />
-                  <rect x="530" y="210" width="18" height="16" rx="4" fill="#22d3ee" />
-
-                  <path d="M136 336 c24 10 54 14 84 10" stroke="#0f172a" stroke-width="6" stroke-linecap="round" opacity="0.4" />
-                  <path d="M420 342 c26 6 56 2 78-10" stroke="#0f172a" stroke-width="6" stroke-linecap="round" opacity="0.4" />
+                  <path d="M120 332 c26 12 62 16 92 12" stroke="#0b1329" stroke-width="8" stroke-linecap="round" opacity="0.45" />
+                  <path d="M382 340 c32 6 66 2 98-12" stroke="#0b1329" stroke-width="8" stroke-linecap="round" opacity="0.45" />
                 </svg>
               </div>
               <div class="mt-4 flex justify-between text-xs text-slate-300">
