Update service area details

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <div class="max-w-5xl mx-auto px-4 py-10 sm:py-14">
           <h2 class="text-2xl sm:text-3xl font-semibold mb-2">Service Area</h2>
           <p class="text-sm text-slate-300 mb-4 max-w-xl">
-            Marcos is based in <span class="font-semibold">[Your City Here]</span> and serves
+            Marcos is based in <span class="font-semibold">San Diego, California</span> and serves
             the surrounding region. Longer routes may be available upon request.
           </p>
 
@@ -178,17 +178,18 @@
             <div class="border border-slate-700 rounded-xl p-4 bg-slate-900/60">
               <h3 class="font-semibold mb-2 text-sm">Primary Areas</h3>
               <ul class="text-xs text-slate-300 space-y-1">
-                <li>• [City 1]</li>
-                <li>• [City 2]</li>
-                <li>• [City 3]</li>
-                <li>• [Nearby Region / County]</li>
+                <li>• San Diego (city & county)</li>
+                <li>• Chula Vista</li>
+                <li>• Escondido</li>
+                <li>• Oceanside / Carlsbad corridor</li>
               </ul>
             </div>
             <div class="border border-slate-700 rounded-xl p-4 bg-slate-900/60">
               <h3 class="font-semibold mb-2 text-sm">By Request</h3>
               <p class="text-xs text-slate-300">
-                Need to go a bit farther? Marcos can sometimes accommodate regional trips
-                outside the normal radius. Share your pickup and drop-off locations for a custom quote.
+                Need to go a bit farther? Marcos can sometimes accommodate regional trips to
+                <span class="font-semibold">Los Angeles</span> and elsewhere in Southern California.
+                Share your pickup and drop-off locations for a custom quote.
               </p>
             </div>
           </div>
