--- a/index.html
+++ b/index.html
@@ -66,64 +66,33 @@
             <div class="relative border border-slate-700 rounded-2xl p-4 bg-gradient-to-br from-slate-900 to-slate-950 shadow-xl">
               <div class="aspect-[4/3] w-full rounded-xl border border-slate-700 overflow-hidden bg-slate-900 flex items-center justify-center text-center px-4">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 400" role="img" aria-labelledby="truck-title truck-desc" class="w-full h-full object-contain" focusable="false">
-                  <title id="truck-title">Minimal box truck logo</title>
-                  <desc id="truck-desc">Clean two-tone logo of a three-quarter perspective box truck</desc>
+                  <title id="truck-title">Simple box truck logo</title>
+                  <desc id="truck-desc">Minimal two-box box truck with two wheels on a dark backdrop</desc>
                   <defs>
                     <linearGradient id="bg" x1="0%" y1="0%" x2="0%" y2="100%">
-                      <stop offset="0%" stop-color="#111827" />
-                      <stop offset="100%" stop-color="#0b1329" />
+                      <stop offset="0%" stop-color="#0f172a" />
+                      <stop offset="100%" stop-color="#0b1220" />
+                    </linearGradient>
+                    <linearGradient id="body" x1="0%" y1="0%" x2="100%" y2="0%">
+                      <stop offset="0%" stop-color="#e5e7eb" />
+                      <stop offset="100%" stop-color="#d5dae1" />
                     </linearGradient>
                   </defs>
 
                   <rect width="640" height="400" rx="24" fill="url(#bg)" />
-                  <rect x="120" y="274" width="400" height="18" rx="9" fill="#0f172a" />
-                  <rect x="104" y="288" width="432" height="32" rx="12" fill="#0b1220" />
+                  <line x1="120" y1="290" x2="520" y2="290" stroke="#0b1329" stroke-width="10" stroke-linecap="round" />
 
-                  <g transform="translate(140 98)">
-                    <rect x="78" y="92" width="264" height="140" rx="18" fill="#e5e7eb" stroke="#cbd5e1" stroke-width="10" />
-                    <path d="M76 150 L172 112 L276 136 L276 248 L78 248 Z" fill="#f8fafc" stroke="#cbd5e1" stroke-width="10" />
-                    <path d="M76 150 L172 112 L172 248 L78 248 Z" fill="#f1f5f9" />
-                    <rect x="108" y="156" width="70" height="66" rx="12" fill="#0ea5e9" stroke="#cbd5e1" stroke-width="8" />
-                    <path d="M178 160 L228 214" stroke="#cbd5e1" stroke-width="8" stroke-linecap="round" />
-                    <rect x="264" y="148" width="130" height="98" rx="12" fill="#e2e8f0" stroke="#cbd5e1" stroke-width="8" />
-                    <rect x="284" y="228" width="54" height="20" rx="8" fill="#cbd5e1" />
-                    <rect x="346" y="228" width="54" height="20" rx="8" fill="#cbd5e1" />
-                    <rect x="140" y="246" width="62" height="14" rx="7" fill="#111827" />
-                    <rect x="282" y="246" width="126" height="14" rx="7" fill="#111827" />
+                  <g transform="translate(140 110)">
+                    <rect x="90" y="90" width="240" height="120" rx="12" fill="url(#body)" stroke="#cbd5e1" stroke-width="10" />
+                    <rect x="330" y="112" width="90" height="98" rx="12" fill="#e2e8f0" stroke="#cbd5e1" stroke-width="8" />
+                    <rect x="348" y="128" width="54" height="32" rx="8" fill="#0ea5e9" stroke="#cbd5e1" stroke-width="6" />
+                    <rect x="90" y="210" width="330" height="16" rx="8" fill="#111827" />
 
-                    <path d="M32 248 H424" stroke="#0f172a" stroke-width="18" stroke-linecap="round" />
-                    <circle cx="132" cy="258" r="54" fill="#0b1220" stroke="#020617" stroke-width="10" />
-                    <circle cx="132" cy="258" r="26" fill="#e2e8f0" stroke="#cbd5e1" stroke-width="10" />
-                    <circle cx="344" cy="258" r="54" fill="#0b1220" stroke="#020617" stroke-width="10" />
-                    <circle cx="344" cy="258" r="26" fill="#e2e8f0" stroke="#cbd5e1" stroke-width="10" />
-                    <circle cx="132" cy="258" r="8" fill="#94a3b8" />
-                    <circle cx="344" cy="258" r="8" fill="#94a3b8" />
-
-                    <rect x="214" y="206" width="76" height="24" rx="10" fill="#fbbf24" />
-                    <rect x="236" y="238" width="112" height="14" rx="7" fill="#0f172a" />
-                    <rect x="258" y="256" width="60" height="12" rx="6" fill="#020617" />
-
-                    <circle cx="250" cy="184" r="8" fill="#fbbf24" />
-                    <rect x="214" y="186" width="30" height="8" rx="4" fill="#94a3b8" />
-                    <rect x="214" y="200" width="30" height="8" rx="4" fill="#94a3b8" />
-                    <rect x="356" y="176" width="28" height="10" rx="5" fill="#94a3b8" opacity="0.9" />
-                    <rect x="356" y="192" width="42" height="10" rx="5" fill="#94a3b8" opacity="0.9" />
-                    <rect x="356" y="208" width="22" height="10" rx="5" fill="#94a3b8" opacity="0.9" />
-
-                    <rect x="40" y="272" width="46" height="16" rx="8" fill="#0f172a" stroke="#020617" stroke-width="6" />
-                    <rect x="102" y="272" width="46" height="16" rx="8" fill="#0f172a" stroke="#020617" stroke-width="6" />
-                    <rect x="318" y="272" width="46" height="16" rx="8" fill="#0f172a" stroke="#020617" stroke-width="6" />
-                    <rect x="258" y="272" width="46" height="16" rx="8" fill="#0f172a" stroke="#020617" stroke-width="6" />
-
-                    <rect x="406" y="214" width="20" height="54" rx="8" fill="#22c55e" stroke="#0f172a" stroke-width="6" />
-                    <rect x="30" y="176" width="12" height="36" rx="6" fill="#fbbf24" />
-                    <rect x="26" y="214" width="22" height="12" rx="6" fill="#f59e0b" />
-                    <rect x="406" y="182" width="18" height="20" rx="7" fill="#fbbf24" />
-                    <rect x="420" y="178" width="22" height="18" rx="5" fill="#0ea5e9" />
+                    <circle cx="150" cy="212" r="44" fill="#0b1220" stroke="#020617" stroke-width="10" />
+                    <circle cx="150" cy="212" r="20" fill="#e2e8f0" stroke="#cbd5e1" stroke-width="8" />
+                    <circle cx="330" cy="212" r="44" fill="#0b1220" stroke="#020617" stroke-width="10" />
+                    <circle cx="330" cy="212" r="20" fill="#e2e8f0" stroke="#cbd5e1" stroke-width="8" />
                   </g>
-
-                  <path d="M120 332 c26 12 62 16 92 12" stroke="#0b1329" stroke-width="8" stroke-linecap="round" opacity="0.45" />
-                  <path d="M382 340 c32 6 66 2 98-12" stroke="#0b1329" stroke-width="8" stroke-linecap="round" opacity="0.45" />
                 </svg>
               </div>
               <div class="mt-4 flex justify-between text-xs text-slate-300">
