Emphasize bilingual service

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
               </li>
               <li class="flex gap-3">
                 <span class="mt-1 w-4 h-4 rounded-full border border-yellow-400 flex items-center justify-center text-[0.55rem]">✓</span>
-                <span><strong>Bilingual (English / Spanish)</strong> — great for diverse customers and crews. (Remove if not true.)</span>
+                <span><strong>Bilingual (English / Spanish)</strong> — ready to coordinate clearly with customers and crews in either language.</span>
               </li>
             </ul>
           </div>
@@ -227,6 +227,8 @@
             Reach out directly with what you need moved, where it’s going, and when.
             Marcos responds quickly with pricing and availability.
           </p>
+
+          <p class="text-xs text-yellow-300 mb-4">Se habla español — Marcos puede coordinar en inglés o español.</p>
 
           <div class="grid md:grid-cols-2 gap-8">
             <div class="space-y-4 text-sm">
